# monad-test

./: .env.example  .gitignore  CLAUDE_CODE_OPUS_INSTRUCTIONS.md  CRITICAL_FIX_TRADE_IMBALANCE.md  CRITICAL_GAS_FIX_INSTRUCTIONS.md  Cargo.toml  DEX_TO_DEX_TEST_FEATURE.md  EXECUTION_IMPLEMENTATION_INSTRUCTIONS.md  FIX_NADFUN_V3_EVENTS.md  FIX_PRICE_INVERSION.md  FIX_STALE_PRICE_PROTECTION.md  Fixes_Needed.md  GAS_FIX_INSTRUCTIONS.md  GAS_PROFITABILITY_OPTIMIZATION_INSTRUCTIONS.md  IMPLEMENTATION_INSTRUCTIONS.md  INSTRUCTIONS.md  MONAD_ARBITRAGE_MVP_INSTRUCTIONS.md  MONAD_ARB_BOT_FIX_INSTRUCTIONS.md  MONAD_ARB_MVP_FIX_INSTRUCTIONS.md  MONAD_ARB_MVP_INSTRUCTIONS.md  NADFUN_FIX_INSTRUCTIONS.md  PARALLEL_EXECUTION_INSTRUCTIONS.md  PHASE2_IMPLEMENTATION_INSTRUCTIONS.md  PHASE_4A_INSTRUCTIONS.md  PRIORITY_1_AND_3_INSTRUCTIONS.md  README.md  ROUTER_FIX_INSTRUCTIONS.md  RPC_BATCH_CALL_GUIDE.md  SIMULATION_IMPLEMENTATION_INSTRUCTIONS.md  V4_AND_VERIFICATION_CLAUDE_CODE_OPUS_INSTRUCTIONS.md  instructions.md  monad_arb_phase1_instructions.md  monday_trade_fix_instructions.md  verify_lfj_bin_step.sh
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/script/: Deploy.s.sol
contracts/src/: MonadAtomicArb.sol
contracts/src/interfaces/: IERC20.sol
monad-arb-mvp/: .env.example  Cargo.toml
monad-arb-mvp/src/: config.rs  main.rs
monad-arb-mvp/src/dex/: lfj.rs  mod.rs  pancakeswap.rs  uniswap_v3.rs  uniswap_v4.rs
monad-arb-mvp/src/graph/: bellman_ford.rs  builder.rs  mod.rs  types.rs
src/: config.rs  display.rs  execution.rs  gas_cache.rs  health.rs  main.rs  mev_validation.rs  monitor.rs  monorail.rs  multicall.rs  node_config.rs  nonce.rs  pools.rs  price.rs  spread_display.rs  spread_filter.rs  spread_logger.rs  spread_tracker.rs  stats.rs  trader.rs  wallet.rs  zrx.rs
src/dex/: batch_client.rs  lfj.rs  mod.rs  pancakeswap.rs  uniswap_v3.rs  uniswap_v4.rs
src/execution/: atomic_arb.rs  fast_arb.rs  mod.rs  report.rs  swap.rs
src/execution/routers/: lfj.rs  mod.rs  monday.rs  pancake_v3.rs  uniswap_v3.rs
src/graph/: bellman_ford.rs  builder.rs
src/pools/: lfj_pool.rs  mod.rs  monday_pool.rs  traits.rs  v3_pool.rs
src/simulation/: diagnostics.rs  fee_validator.rs  liquidity.rs  mod.rs  profit_calculator.rs  quote_fetcher.rs  simulator.rs
src/wallet/: balance.rs  mod.rs  wrap.rs
