[package]
name = "monad-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy = { version = "1.1", features = [
    "full",
    "provider-ws",
    "network",
    "contract",
    "sol-types",
    "json-rpc",
    "signers",
] }
eyre = "0.6"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
