[package]
name = "monad-arb-mvp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Ethereum/EVM Interaction (Alloy - latest stable version)
alloy = { version = "1.0", features = [
    "full",
    "provider-http",
    "network",
    "contract",
    "sol-types",
    "json-rpc"
]}

# Graph algorithms
petgraph = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Utilities
hex = "0.4"

# Async trait support
async-trait = "0.1"
